# home-assistant-config

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.circleci/: config.yml
esp_devices/attic_lower/: device_config.json
esp_devices/balcony_controller/: device_config.json
esp_devices/battery_charger/: device_config.json
esp_devices/cellar_controller/: device_config.json
esp_devices/christmas_tree_switch/: device_config.json
esp_devices/dining_room_window/: device_config.json
esp_devices/dining_room_window_2/: device_config.json
esp_devices/dishwasher_sensor/: device_config.json
esp_devices/driveway/: device_config.json
esp_devices/driveway2/: device_config.json
esp_devices/furnace_temperature/: device_config.json
esp_devices/garage_controller/: device_config.json
esp_devices/gate_controller/: device_config.json
esp_devices/gate_reflector/: device_config.json
esp_devices/living_room_window/: device_config.json
esp_devices/main_controller/: device_config.json
esp_devices/main_controller2/: device_config.json
esp_devices/main_panel/: device_config.json
esp_devices/motion_sensor_driveway_lower/: device_config.json
esp_devices/motion_sensor_driveway_upper/: device_config.json
esp_devices/server_power_supply/: device_config.json
home/: configuration.yaml  customize.yaml  groups.yaml
test/: .gitignore  Blocker.py  DateTimeUtilTest.robot  TestAppDaemon.py  TestAppTest.robot  __init__.robot  foo.robot  patch_appdaemon.py  run-test  setup_virtualenv.sh
test/dependencies/appdaemon/: pyproject.toml
(+384 files in other folders)
