[project]
name = "appdaemon-test-env"
version = "0.1.0"
description = "AppDaemon integration test environment"
requires-python = ">=3.12,<3.14"
dependencies = [
    "appdaemon @ git+https://github.com/petersohn/appdaemon@fix-unload-bug",
    "mypy",
    "types-psutil",
    "types-pyyaml",
    "types-python-dateutil",
]
